rename home address

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "materialui",
-  "homepage": "https://dharif1014.github.io/portfolio",
+  "homepage": "https://sharif1014.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
